--- a/app/assets/stylesheets/orders.scss
+++ b/app/assets/stylesheets/orders.scss
@@ -1,3 +1,29 @@
 // Place all the styles related to the Orders controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: https://sass-lang.com/
+
+.datepicker {
+	position: relative;
+	width: 250px;
+}
+.datepicker i {
+	position: absolute;
+	top: 13px;
+	right: 20px;
+}
+.datepicker-inline {
+
+	position: absolute !important;
+	background: #fff;
+	box-shadow: 1px 5px 12px #ccc;
+}
+.datepicker table {
+	width: 100%;
+}
+.toolbar {
+	display: flex;
+	justify-content: space-between;
+	flex-wrap: wrap;
+	margin-top: 30px;
+	margin-bottom: 10px;
+}
